--- a/app/styles/pages/pages-shared.scss
+++ b/app/styles/pages/pages-shared.scss
@@ -330,6 +330,11 @@
                 height: auto;
                 width: auto;
             }
+
+            @media only screen and (max-width: 600px) {
+                height: auto;
+                width: auto;
+            }
         }
 
         .box {
